--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2 class="title"
             id="title">I am a third H2</h2>
     
-    <div>
+    <div class="container">
         <button class="login-button">Log In</button>
         <button class="login-button">Create account</button>
         <button id="logout">Log out</button>
